--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "axios": "^0.19.0",
+    "react": "^16.12.0",
+    "react-datepicker": "^2.9.3",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.0.1",
+    "reactstrap": "^8.2.0",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
